NewTimes 웹페이지꾸미기 final_category

--- a/index.html
+++ b/index.html
@@ -19,21 +19,14 @@
             </div>
 
             <div class="menus button">
-                <button>Sport</button>
-                <button>Tech</button>
-                <button>World</button>
-                <button>Finance</button>
+                <button>Sports</button>
+                <button>Technology</button>
+                <button>General</button>
+                <button>Health</button>
                 <button>Business</button>
-                <button>Politics</button>
-                <button>Economics</button>
                 <button>Entertainment</button>
-                <button>Beauty</button>
-                <button>Travel</button>
-                <button>Music</button>
-                <button>Food</button>
                 <button>Science</button>
-                <button>Gaming</button>
-                <button>Energy</button>
+ 
             </div>
         </section>
         <section id="news-board">
