--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="shortcut icon" href="#">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,6 +14,10 @@
   </head>
   <body>
     <section class="container">
+        <div>
+            <input id="search-input"/>
+            <button onclick="getNewsByKeyword()">검색</button>
+        </div>
         <section>
             <div class="head-line">
                   <svg viewBox="0 0 184 25" fill="#000" aria-hidden="true">
